# tech_assignment_agronout

./: .gitignore  README.md  input.txt  pyproject.toml  requirements.txt
phone_parser/: cli.py  extractor.py  io_utils.py  normalizer.py
