[project]
name = "phone_parser"
version = "0.1.0"
description = "CLI для извлечения и нормализации российских телефонных номеров"
readme = "README.md"
authors = [ { name="Nazarij", email="nazarijbeketovv@gmail.com" } ]
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "loguru>=0.7",
    "six>=1.16"
]

[project.scripts]
parse = "phone_parser.cli:main"